<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="60sp"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tvdatetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_date" />
    
    <TextView
        android:id="@+id/tvpan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_pan" />

    <TextView
        android:id="@+id/tvamt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/txt_gross" />

    <TextView
        android:id="@+id/tvdiscount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/txt_discount" />

    <TextView
        android:id="@+id/tvtotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/txt_net" />
    
    <Button
        android:id="@+id/bok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dip"
        android:text="@android:string/ok" />

</LinearLayout>